Tenho que terminar umas coisinhas da anamnese

--- a/Anamnese/Views/PacienteModels/Details.cshtml
+++ b/Anamnese/Views/PacienteModels/Details.cshtml
@@ -115,6 +115,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdPaciente">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Ver anamneses</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdPaciente">Editar</a> |
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
