--- a/Anamnese/Views/PacienteModels/Edit.cshtml
+++ b/Anamnese/Views/PacienteModels/Edit.cshtml
@@ -49,6 +49,11 @@
                 <span asp-validation-for="CertidaoPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="NaturalidadePaciente" class="control-label"></label>
+                <input asp-for="NaturalidadePaciente" class="form-control" />
+                <span asp-validation-for="NaturalidadePaciente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TelefonePaciente" class="control-label"></label>
                 <input asp-for="TelefonePaciente" class="form-control" />
                 <span asp-validation-for="TelefonePaciente" class="text-danger"></span>
