--- a/Anamnese/Views/PacienteModels/Create.cshtml
+++ b/Anamnese/Views/PacienteModels/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+
 }
 
 <h1>Create</h1>
@@ -29,42 +30,61 @@
             </div>
             <div class="form-group">
                 <label asp-for="GeneroPaciente" class="control-label"></label>
-                <input asp-for="GeneroPaciente" class="form-control" />
+                <select asp-for="GeneroPaciente" class="form-select">
+                    <option value="" disabled selected>Selecione...</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+                    <option value="Divorciado(a)">Divorciado(a)</option>
+                    <option value="Outro">Outro</option>
+                    <option value="Prefiro não informar">Prefiro não informar</option>
+                </select>
                 <span asp-validation-for="GeneroPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CpfPaciente" class="control-label"></label>
-                <input asp-for="CpfPaciente" class="form-control" />
+                <input asp-for="CpfPaciente" class="form-control" placeholder="XXX.XXX.XXX-XX" />
                 <span asp-validation-for="CpfPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RgPaciente" class="control-label"></label>
-                <input asp-for="RgPaciente" class="form-control" />
+                <input asp-for="RgPaciente" class="form-control" placeholder="XX.XXX.XXX-XX" />
                 <span asp-validation-for="RgPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CertidaoPaciente" class="control-label"></label>
-                <input asp-for="CertidaoPaciente" class="form-control" />
+                <input asp-for="CertidaoPaciente" class="form-control" placeholder="XXXXXX, XX XX XXXX, XX:XX" />
                 <span asp-validation-for="CertidaoPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="NaturalidadePaciente" class="control-label"></label>
+                <input asp-for="NaturalidadePaciente" class="form-control" />
+                <span asp-validation-for="NaturalidadePaciente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TelefonePaciente" class="control-label"></label>
-                <input asp-for="TelefonePaciente" class="form-control" />
+                <input asp-for="TelefonePaciente" class="form-control" placeholder="(XX) XXXX-XXXX" />
                 <span asp-validation-for="TelefonePaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CelularPaciente" class="control-label"></label>
-                <input asp-for="CelularPaciente" class="form-control" />
+                <input asp-for="CelularPaciente" class="form-control" placeholder="(XX) XXXXX-XXXX" />
                 <span asp-validation-for="CelularPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EstadoCivilPaciente" class="control-label"></label>
-                <input asp-for="EstadoCivilPaciente" class="form-control" />
+                <select asp-for="EstadoCivilPaciente" class="form-select">
+                    <option value="" disabled selected>Selecione...</option>
+                    <option value="Solteiro(a)">Solteiro(a)</option>
+                    <option value="Casado(a)">Casado(a)</option>
+                    <option value="Divorciado(a)">Divorciado(a)</option>
+                    <option value="Viúvo(a)">Viúvo(a)</option>
+                    <option value="Separado(a)">Separado(a)</option>
+                </select>
                 <span asp-validation-for="EstadoCivilPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CepPaciente" class="control-label"></label>
-                <input asp-for="CepPaciente" class="form-control" />
+                <input asp-for="CepPaciente" class="form-control" placeholder="XXXXX-XXX" />
                 <span asp-validation-for="CepPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -89,14 +109,39 @@
             </div>
             <div class="form-group">
                 <label asp-for="EstadoPaciente" class="control-label"></label>
-                <input asp-for="EstadoPaciente" class="form-control" />
+                <select asp-for="EstadoPaciente" class="form-select">
+                    <option value="" disabled selected>Selecione...</option>
+                    <option value="AC">AC - Acre</option>
+                    <option value="AL">AL - Alagoas</option>
+                    <option value="AP">AP - Amapá</option>
+                    <option value="AM">AM - Amazonas</option>
+                    <option value="BA">BA - Bahia</option>
+                    <option value="CE">CE - Ceará</option>
+                    <option value="DF">DF - Distrito Federal</option>
+                    <option value="ES">ES - Espírito Santo</option>
+                    <option value="GO">GO - Goiás</option>
+                    <option value="MA">MA - Maranhão</option>
+                    <option value="MT">MT - Mato Grosso</option>
+                    <option value="MS">MS - Mato Grosso do Sul</option>
+                    <option value="MG">MG - Minas Gerais</option>
+                    <option value="PA">PA - Pará</option>
+                    <option value="PB">PB - Paraíba</option>
+                    <option value="PR">PR - Paraná</option>
+                    <option value="PE">PE - Pernambuco</option>
+                    <option value="PI">PI - Piauí</option>
+                    <option value="RJ">RJ - Rio de Janeiro</option>
+                    <option value="RN">RN - Rio Grande do Norte</option>
+                    <option value="RS">RS - Rio Grande do Sul</option>
+                    <option value="RO">RO - Rondônia</option>
+                    <option value="RR">RR - Roraima</option>
+                    <option value="SC">SC - Santa Catarina</option>
+                    <option value="SP">SP - São Paulo</option>
+                    <option value="SE">SE - Sergipe</option>
+                    <option value="TO">TO - Tocantins</option>
+                </select>
                 <span asp-validation-for="EstadoPaciente" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DataCadastroPaciente" class="control-label"></label>
-                <input asp-for="DataCadastroPaciente" class="form-control" />
-                <span asp-validation-for="DataCadastroPaciente" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
