--- a/Anamnese/Views/PacienteModels/Delete.cshtml
+++ b/Anamnese/Views/PacienteModels/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja deleta este paciente?</h3>
 <div>
     <h4>PacienteModel</h4>
     <hr />
@@ -65,6 +65,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CelularPaciente)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NaturalidadePaciente)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NaturalidadePaciente)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EstadoCivilPaciente)
         </dt>
@@ -118,6 +124,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdPaciente" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar a lista</a>
     </form>
 </div>
