mexi um pouco na view dos pacientes

--- a/Anamnese/Views/PacienteModels/Delete.cshtml
+++ b/Anamnese/Views/PacienteModels/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
 <h3>Tem certeza que deseja deleta este paciente?</h3>
 <div>
-    <h4>PacienteModel</h4>
+    <h4>Paciente</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -123,7 +123,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdPaciente" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
         <a asp-action="Index">Voltar a lista</a>
     </form>
 </div>
