--- a/Anamnese/Views/PacienteModels/Details.cshtml
+++ b/Anamnese/Views/PacienteModels/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Detalhes</h1>
 
 <div>
-    <h4>PacienteModel</h4>
+    <h4>Paciente</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -121,7 +121,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Ver anamneses</a>
+    <a asp-action="Index">Ver anamneses</a> |
     <a asp-action="Edit" asp-route-id="@Model?.IdPaciente">Editar</a> |
     <a asp-action="Index">Voltar para a lista</a>
 </div>
