--- a/Anamnese/Views/PacienteModels/Create.cshtml
+++ b/Anamnese/Views/PacienteModels/Create.cshtml
@@ -5,9 +5,9 @@
 
 }
 
-<h1>Create</h1>
+<h1>Cadastro</h1>
 
-<h4>PacienteModel</h4>
+<h4>Paciente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -143,14 +143,14 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Cadastrar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
