--- a/Anamnese/Views/AnamneseModels/Create.cshtml
+++ b/Anamnese/Views/AnamneseModels/Create.cshtml
@@ -63,7 +63,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar para a lista de Anamneses</a>
 </div>
 
 @section Scripts {
