--- a/Anamnese/Views/AnamneseModels/Delete.cshtml
+++ b/Anamnese/Views/AnamneseModels/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    var idPaciente = Context.Request.Query["IdPaciente"].ToString();
 }
 
 <h1>Delete</h1>
@@ -70,6 +71,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdAnamnese" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar para a lista de Anamneses</a>
     </form>
 </div>
