faltar ajudar o design e a geração de pdf

--- a/Anamnese/Views/AnamneseModels/Create.cshtml
+++ b/Anamnese/Views/AnamneseModels/Create.cshtml
@@ -5,9 +5,8 @@
     var idPaciente = Context.Request.Query["IdPaciente"].ToString();
 }
 
-<h1>Create</h1>
+<h1>Cadastro de Anamnese</h1>
 
-<h4>AnamneseModel</h4>
 <p>idPaciente: @idPaciente</p>
 <hr />
 <div class="row">
