--- a/Anamnese/Views/PacienteModels/Create.cshtml
+++ b/Anamnese/Views/PacienteModels/Create.cshtml
@@ -5,9 +5,7 @@
 
 }
 
-<h1>Cadastro</h1>
-
-<h4>Paciente</h4>
+<h1>Cadastro de pacientes</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
