--- a/Anamnese/Views/PacienteModels/Edit.cshtml
+++ b/Anamnese/Views/PacienteModels/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
-
-<h4>Paciente</h4>
+<h1>Editar Paciente</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
