--- a/Anamnese/Views/AnamneseModels/Edit.cshtml
+++ b/Anamnese/Views/AnamneseModels/Edit.cshtml
@@ -5,9 +5,7 @@
     var idPaciente = Context.Request.Query["IdPaciente"].ToString();
 }
 
-<h1>Edit</h1>
-
-<h4>AnamneseModel</h4>
+<h1>Editar Anamnese</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -53,7 +51,7 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
