--- a/Anamnese/Views/AnamneseModels/Edit.cshtml
+++ b/Anamnese/Views/AnamneseModels/Edit.cshtml
@@ -58,7 +58,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar para a lista de Anamneses</a>
+    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar</a>
 </div>
 
 @section Scripts {
