--- a/Anamnese/Views/PacienteModels/Delete.cshtml
+++ b/Anamnese/Views/PacienteModels/Delete.cshtml
@@ -122,6 +122,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdPaciente" />
         <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar a lista</a>
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
