--- a/Anamnese/Views/AnamneseModels/Create.cshtml
+++ b/Anamnese/Views/AnamneseModels/Create.cshtml
@@ -62,7 +62,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar para a lista de Anamneses</a>
+    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar</a>
 </div>
 
 @section Scripts {
