--- a/Anamnese/Views/AnamneseModels/Delete.cshtml
+++ b/Anamnese/Views/AnamneseModels/Delete.cshtml
@@ -69,6 +69,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdAnamnese" />
         <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar para a lista de Anamneses</a>
+        <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar</a>
     </form>
 </div>
