--- a/Anamnese/Views/PacienteModels/Create.cshtml
+++ b/Anamnese/Views/PacienteModels/Create.cshtml
@@ -148,7 +148,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar para a lista</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
